--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Page</title>
 </head>
 <body>
     <h1>Hello NV Polytechnic</h1>
+    <h2>Welocome to B R Academy</h2>
 </body>
 </html>
